# DLA

./: .gitignore  README.md  main.py  pyproject.toml
1_Homework/: .gitignore  DLA-Lab1.ipynb  README.md  main.py  plot.py  pyproject.toml
1_Homework/Rtfc/: test.py  test_utils.py
1_Homework/Rtfc/config/: efficient_nets.yaml  models.yaml
1_Homework/Rtfc/src/: classifier.py  dataset.py  feature_extractor.py  metric.py  plot.py  retrieval.py  utils.py
1_Homework/Rtfc/test/: test.py
1_Homework/config/: models.yaml
1_Homework/dl_pipeline/: logger.py  train.py  trainer.py
1_Homework/dl_pipeline/configs/: config.yaml  configs.py
1_Homework/dl_pipeline/configs/logger/: wandb.yaml
1_Homework/dl_pipeline/configs/loss/: cross_entropy.yaml
1_Homework/dl_pipeline/configs/optimizer/: adam.yaml  sgd.yaml
1_Homework/src/: classifier.py  dataset.py  feature_extractor.py  retrieval.py  utils.py
1_Homework/test/: test.py
2_Homework/: DLA-Lab2.ipynb  main.py  pyproject.toml
3_DRL/: .gitignore  DLA-Lab3-DRL.ipynb  main.py  notes.md  pyproject.toml
3_DRL/OpenAIcar/: .gitignore  main.py
3_DRL/OpenAIcar/runs/CarRacing-v3__seed_1__1781975163/: command.txt  events.out.tfevents.1781975163.DESKTOP-BHH33RO.17899.0
3_DRL/OpenAIcar/runs/CarRacing-v3__seed_1__1782169288/: command.txt  events.out.tfevents.1782169288.DESKTOP-BHH33RO.6717.0
3_DRL/OpenAIcar/runs/CarRacing-v3__seed_3__1782169642/: command.txt  events.out.tfevents.1782169642.DESKTOP-BHH33RO.7011.0
3_DRL/OpenAIcar/src/: buffer.py  config.py  env_wrapper.py  models.py  trainer.py
3_DRL/notebooks/: Cartpole.ipynb  DLA-Lab3-DRL.ipynb
3_DRL/src/: device.py  evaluate.py  main.py  plot.py  policynet.py  reinforce.py  train.py  utils.py  valuenet.py
3_homework/: DLA-Lab3-DRL.ipynb
