[project]
name = "lab1"
version = "0.1.0"
description = "Deep Learning Applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm>=4.67.3",
    "pyyaml>=6.0.3",
    "matplotlib>=3.10.8",
    "gymnasium>=1.3.0",
    "pygame>=2.6.1",
    "jupyterlab>=4.5.8",
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
