[project]
name = "2-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "huggingface-hub>=1.20.1",
    "ipython>=9.14.1",
    "jupyter>=1.1.1",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "wandb>=0.27.2",
]
