[project]
name = "3-drl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[box2d,other]>=1.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "moviepy>=2.2.1",
    "pygame>=2.6.1",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
]
